Fix collapsed background color

--- a/src/pages/Layout.css
+++ b/src/pages/Layout.css
@@ -116,7 +116,8 @@ ul.posts {
     display: block;
   }
 
-  #sidebar .ant-menu-inline .ant-menu-item-selected {
+  #sidebar .ant-menu-inline .ant-menu-item-selected,
+  #sidebar .ant-menu-vertical .ant-menu-item-selected {
     background-color: #fff;
     border-left: 3px solid #108ee9;
   }
